--- a/src/app/typography.scss
+++ b/src/app/typography.scss
@@ -36,6 +36,7 @@ a {
   text-decoration: underline;
   text-decoration-style: dotted;
   font-style: italic;
+  word-break: break-all;
 }
 
 .highlight {
